--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "my-vue-app",
+  "name": "my-nx-monorepo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "nx build",
+    "serve": "nx serve",
+    "lint": "nx lint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -25,13 +24,14 @@
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@nrwl/nx": "^15.0.0",
+    "@nrwl/react": "^15.0.0",
+    "@nrwl/nest": "^15.0.0",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "typescript-eslint": "^8.26.1"
   }
 }
