--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "@react-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "nx run-many --target=build --all --parallel",
+    "dev": "nx run-many --target=dev --all --parallel",
+    "lint": "nx run-many --target=lint --all --parallel",
+    "test": "nx run-many --target=test --all --parallel",
+    "typecheck": "nx run-many --target=typecheck --all --parallel",
+    "format": "nx format:write"
+  },
   "private": true,
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
     "react-is": "19.0.0",
     "react-router-dom": "6.29.0",
-    "styled-components": "5.3.6"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@mui/styled-engine-sc": "^7.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.17",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
     "@nx/eslint": "20.8.1",
     "@nx/eslint-plugin": "20.8.1",
     "@nx/js": "20.8.1",
@@ -25,28 +38,31 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
     "@types/react-is": "19.0.0",
     "@types/styled-components": "5.1.26",
-    "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
     "babel-plugin-styled-components": "1.10.7",
-    "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "20.8.1",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
+    "vitest": "^3.0.0",
+    "@eslint/js": "^9.22.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.19.0",
-    "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "typescript-eslint": "^8.26.1",
+    "vite": "^6.3.1"
   },
   "workspaces": [
     "apps/*"
