--- a/package.json
+++ b/package.json
@@ -12,57 +12,76 @@
   },
   "private": true,
   "dependencies": {
-    "react-is": "19.0.0",
-    "react-router-dom": "6.29.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-is": "19.0.0",
+    "react-router-dom": "6.29.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "styled-components": "^6.1.17",
     "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.8.1",
     "@nx/eslint-plugin": "20.8.1",
+    "@nx/jest": "20.8.1",
     "@nx/js": "20.8.1",
+    "@nx/nest": "^20.8.1",
+    "@nx/node": "20.8.1",
     "@nx/react": "20.8.1",
     "@nx/vite": "20.8.1",
     "@nx/web": "20.8.1",
+    "@nx/webpack": "20.8.1",
     "@nx/workspace": "20.8.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@types/react-is": "19.0.0",
     "@types/styled-components": "5.1.26",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.0",
     "babel-plugin-styled-components": "1.10.7",
+    "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "20.8.1",
     "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "vitest": "^3.0.0",
-    "@eslint/js": "^9.22.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vitest": "^3.0.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
     "apps/*"
