--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/core": "^11.1.0",
     "@nestjs/platform-express": "^11.1.0",
     "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-is": "19.0.0",
@@ -31,7 +33,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "styled-components": "^6.1.17",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -55,6 +58,7 @@
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.36",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
