--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.6.0",
+    "chokidar": "^4.0.3",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
