--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
     "@nestjs/common": "^11.1.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.0",
     "@nestjs/platform-express": "^11.1.0",
     "@nestjs/serve-static": "^5.0.3",
@@ -68,6 +69,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.0",
     "babel-plugin-styled-components": "1.10.7",
+    "better-sqlite3": "^11.9.1",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
