--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@faker-js/faker": "^9.7.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
@@ -66,14 +67,16 @@
     "@types/react-dom": "^19.0.4",
     "@types/react-is": "19.0.0",
     "@types/styled-components": "5.1.26",
+    "@typescript-eslint/parser": "^8.32.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.0",
     "babel-plugin-styled-components": "1.10.7",
     "better-sqlite3": "^11.9.1",
-    "eslint": "^9.22.0",
+    "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -83,7 +86,9 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "20.8.1",
-    "prettier": "^2.6.2",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.2",
+    "stylelint-prettier": "^5.0.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
